Refactor WhatsApp card with simplified static content
Streamlines the WhatsApp integration card by:
- Replacing dynamic data fetching with static configuration
- Improving component organization with predefined data structures
- Adding modal interaction for WhatsApp messaging
- Updating URL configurations for production and development environments

Simplifies maintenance while maintaining core functionality for WhatsApp integration, billing information display, and guide access.

--- a/src/app/extensions/whatsapp-card.json
+++ b/src/app/extensions/whatsapp-card.json
@@ -4,9 +4,9 @@
 		"title": "WhatsApp Integration",
 		"description": "A custom card for the right sidebar on contact records.",
 		"location": "crm.record.sidebar",
-		"uid": "right-sidebar-card",
+		"uid": "whatsapp-card",
 		"module": {
-			"file": "RightSidebarCard.jsx"
+			"file": "WhatsappCard.jsx"
 		},
 		"objectTypes": [
 			{
