Refactor WhatsApp card to use dynamic data loading
Transforms static WhatsApp integration card into a dynamic component that:
- Fetches subscription and UI data from external API
- Adds loading state handling
- Implements dynamic status indicators with proper styling
- Introduces configurable iframe modals for forms and conversations

Enhances user experience with loading states and dynamic content updates.

--- a/src/app/extensions/whatsapp-card.json
+++ b/src/app/extensions/whatsapp-card.json
@@ -13,6 +13,13 @@
 				"name": "contacts"
 			}
 		],
+		"fetchCrmObjectProperties": [
+			"email",
+			"firstname",
+			"lastname",
+			"mobilephone",
+			"phone"
+		],
 		"previewImage": {
 			"file": "assets/sidebar-card-preview.jpg",
 			"altText": "Preview of the right sidebar card."
