Adds WhatsApp stats card to contact record view
Creates a new CRM card component to display WhatsApp-related statistics in the middle column of contact records. The card shows metrics with trend indicators.

Updates package configuration and security settings to include the new card and its associated API endpoint.

--- a/src/app/extensions/package.json
+++ b/src/app/extensions/package.json
@@ -18,11 +18,18 @@
   },
   "cards": [
     {
-      "id": "whatsapp-card",
+      "id": "whatsapp-crm-card",
       "title": "WhatsApp Integration",
       "description": "A custom card for the right sidebar on contact records.",
       "main": "WhatsappCard.jsx",
       "previewImage": "assets/sidebar-card-preview.jpg"
+    },
+    {
+      "id": "whatsapp-stats-card",
+      "title": "WhatsApp Stats",
+      "description": "A custom card for the middle column on contact records.",
+      "main": "ContactStats.jsx",
+      "previewImage": "assets/stats-card-preview.png"
     }
   ]
 }
