Adds WhatsApp trends visualization card for contacts
Introduces a new CRM card extension that displays contact interaction trends using a line chart visualization.

Card includes:
- Line chart with multi-series support
- Color-coded legend

--- a/src/app/public-app.json
+++ b/src/app/public-app.json
@@ -54,6 +54,9 @@
         },
         {
           "file": "./extensions/contact-stats.json"
+        },
+        {
+          "file": "./extensions/contact-trends.json"
         }
       ]
     }
