Adds WhatsApp integration preview card to CRM sidebar
Implements a new CRM card component that integrates WhatsApp functionality:
- Provides two action buttons for form and conversation interactions
- Handles loading states and error scenarios appropriately

The card is configured to appear in the CRM sidebar for contact records, improving user workflow by providing direct access to WhatsApp-related actions.

--- a/src/app/public-app.json
+++ b/src/app/public-app.json
@@ -53,6 +53,9 @@
           "file": "./extensions/whatsapp-card.json"
         },
         {
+          "file": "./extensions/preview-actions.json"
+        },
+        {
           "file": "./extensions/contact-stats.json"
         },
         {
