Adds template distribution card
Adds a new CRM card to display WhatsApp template distribution.

--- a/src/app/public-app.json
+++ b/src/app/public-app.json
@@ -60,6 +60,9 @@
         },
         {
           "file": "./extensions/contact-trends.json"
+        },
+        {
+          "file": "./extensions/template-distribution.json"
         }
       ]
     }
