--- a/src/app/public-app.json
+++ b/src/app/public-app.json
@@ -56,6 +56,9 @@
           "file": "./extensions/preview-actions.json"
         },
         {
+          "file": "./extensions/whatsapp-tab-card.json"
+        },
+        {
           "file": "./extensions/contact-stats.json"
         },
         {
