Remove contact stats, trends, and template distribution cards
- Updates the public app configuration to replace the template distribution extension with the WhatsApp tab card extension.
- Updates WhatsApp card tab titles for clarity

--- a/src/app/extensions/whatsapp-tab-card.json
+++ b/src/app/extensions/whatsapp-tab-card.json
@@ -14,7 +14,7 @@
 			}
 		],
 		"previewImage": {
-			"file": "assets/trends-card-preview.jpg",
+			"file": "assets/tab-card-preview.jpg",
 			"altText": "Preview of the Tabbed card."
 		}
 	}
