--- a/hsproject.json
+++ b/hsproject.json
@@ -1,5 +1,5 @@
 {
   "name": "wa-integration-clone",
-  "srcDir": "src",
-  "platformVersion": "2025.1"
+  "platformVersion": "2025.2",
+  "srcDir": "src"
 }
