Migrate WhatsApp stats card from JSX to TSX and clean up tabs
This commit refactors the existing WhatsApp integration stats card by migrating components from JSX to TSX and applying minor optimizations. No new functionality is introduced.

- Convert tab components to TypeScript: `RecentMessages`, `MessageStats`, `MessageSenders`, `MessageTrends`, and `TemplateDistribution`.
- Use `WhatsAppTabsCard.tsx` as the consolidated entry point.
- Remove obsolete JSX files and unused tab components.
- Replace legacy `whatsapp-tab-card-hsmeta.json` with `whatsapp-tabbed-card-hsmeta.json`.
- Update `package.json` and lockfile for TypeScript and linting related dependencies.
- Reorganize tab components into a dedicated `tabs/` folder for better structure and maintainability.

This refactor improves type safety, maintainability, and consistency without changing behavior.

--- a/src/app/cards/package.json
+++ b/src/app/cards/package.json
@@ -45,5 +45,10 @@
       "main": "PreviewActions.jsx",
       "previewImage": "assets/contact-preview-card-preview.jpg"
     }
-  ]
+  ],
+  "devDependencies": {
+    "@types/react": "^18.3.26",
+    "eslint": "^9.37.0",
+    "typescript": "^5.3.3"
+  }
 }
