--- a/src/app/cards/whatsapp-crm-card-hsmeta.json
+++ b/src/app/cards/whatsapp-crm-card-hsmeta.json
@@ -1,17 +1,13 @@
 {
+  "uid": "whatsapp-crm-card",
+  "type": "card",
   "config": {
     "name": "WhatsApp Integration",
     "location": "crm.record.sidebar",
-    "entrypoint": "/app/cards/WhatsappCard.jsx",
-    "description": "A custom card for the right sidebar on contact records.",
+    "description": "A custom card for the right sidebar on contact records",
+    "entrypoint": "/app/cards/WhatsAppCrmCard.tsx",
     "objectTypes": [
       "contacts"
-    ],
-    "previewImage": {
-      "file": "/app/cards/assets/sidebar-card-preview.jpg",
-      "altText": "Preview of the right sidebar card."
-    }
-  },
-  "uid": "whatsapp-crm-card",
-  "type": "card"
+    ]
+  }
 }
